# Movie-Recommender

./: .gitignore  Project.ipynb  Recommender.py  app.py  chatbot.py  demo.ipynb  main.py  movies_df.pkl  pyproject.toml  rec.py  vectorizer.pkl  workflow.py
pages/: MovieBot.py
templates/: index.html
